plugins {
	id 'java'
	id 'org.springframework.boot' version '3.5.6'
	id 'io.spring.dependency-management' version '1.1.7'
    id 'jacoco'
}

group = 'com.sidpaw'
version = '0.0.1-SNAPSHOT'
description = 'Backend service for a simple todo application'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation('org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.13') {
        exclude group: 'org.apache.commons', module: 'commons-lang3'
        exclude group: 'org.webjars', module: 'swagger-ui'
    }
    // Security: Force latest secure versions to override vulnerable transitive dependencies
    implementation 'org.apache.commons:commons-lang3:3.18.0' // Override vulnerable 3.17.0
    implementation 'org.webjars:swagger-ui:5.27.1' // Override vulnerable swagger-ui version
    implementation 'org.mapstruct:mapstruct:1.5.5.Final'

	compileOnly 'org.projectlombok:lombok'
	developmentOnly 'org.springframework.boot:spring-boot-devtools'
	annotationProcessor 'org.projectlombok:lombok'
    annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.5.Final'
	runtimeOnly 'com.h2database:h2'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

tasks.named('test') {
    useJUnitPlatform()
    finalizedBy jacocoTestReport
}

jacoco {
    toolVersion = "0.8.10"
}

jacocoTestReport {
    dependsOn test
    reports {
        xml.required = true
        html.required = true
        csv.required = false
    }
    finalizedBy jacocoTestCoverageVerification
}

jacocoTestCoverageVerification {
    dependsOn jacocoTestReport
    violationRules {
        rule {
            excludes = [
                    'com.sidpaw.todobackend.TodoBackendApplication*',
                    'com.sidpaw.todobackend.mapper.*Impl*',
                    'com.sidpaw.todobackend.config.*'
            ]
            limit {
                counter = 'LINE'
                value = 'COVEREDRATIO'
                minimum = 0.90
            }
        }
        rule {
            excludes = [
                    'com.sidpaw.todobackend.TodoBackendApplication*',
                    'com.sidpaw.todobackend.mapper.*Impl*',
                    'com.sidpaw.todobackend.config.*'
            ]
            limit {
                counter = 'BRANCH'
                value = 'COVEREDRATIO'
                minimum = 0.90
            }
        }
    }
}
